# zuriHNGXtask1

./: README.md  pyproject.toml
task1/task1/: settings.py  urls.py  views.py
